--- a/index.html
+++ b/index.html
@@ -206,7 +206,7 @@
                 <h3 class="h3 about-card-title">Secured</h3>
 
                 <p class="about-card-text">
-                  All your data in this bot is secured and encrypted. Feel free to use our bot. Any kind of quries
+                  All your data in our bots is secured and encrypted. Feel free to use our bots. Any kind of quries
                   related data then you can ask us.
                 </p>
 
