--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
             <ul class="navbar-list">
 
               <li>
-                <a href="https://lynxstudios.swayzefn2.repl.co/Home" class="navbar-link">Home</a>
+                <a href="https://lynxstudios.xyz" class="navbar-link">Home</a>
               </li>
 
               <li>
