--- a/index.html
+++ b/index.html
@@ -479,7 +479,7 @@
       <div class="center">
 
         <p class="copyright">
-          &copy; 2023 - 2024 <a href="https://replit.com/@swayzefn2/LynxStudios?v=1">LYNX STUDIOS</a> all rights
+          &copy; 2023 - 2024 <a href="https://lynxstudios.xyz">LYNX STUDIOS</a> all rights
           reserved
         </p>
 
