--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
                 <a href="#about" class="navbar-link">About</a>
               </li>
               <li>
-                <a href="#bot" class="navbar-link">Bots</a>
+                <a href="/bot" class="navbar-link">Bots</a>
               </li>
 
               <li>
@@ -244,7 +244,7 @@
         - #Developers 
       -->
 
-      <section class="top-seller" id="bot">
+      <section class="top-seller" id="/bot">
         <div class="container">
 
           <h2 class="h2 top-seller-title">
@@ -381,7 +381,7 @@
           <ul class="social-list">
 
             <li>
-              <a href="https://replit.com/@swayzefn2/LynxStudios?v=1" class="social-link">
+              <a href="" class="social-link">
                 <ion-icon name="logo-replit"></ion-icon>
               </a>
             </li>
@@ -464,10 +464,7 @@
             <li class="footer-item">
               <a href="https://medium.com/discord-bots/making-a-basic-discord-bot-with-java-834949008c2b" class="footer-link">How To Make a Discord Bot</a>
             </li>
-
-            <li class="footer-item">
-              <a href="" class="footer-link">Manage Cookie Settings</a>
-            </li>
+            
           </ul>
 
         </div>
