--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
                 <a href="#about" class="navbar-link">About</a>
               </li>
               <li>
-                <a href="/bot" class="navbar-link">Bots</a>
+                <a href="#bot" class="navbar-link">Bots</a>
               </li>
 
               <li>
@@ -244,7 +244,7 @@
         - #Developers 
       -->
 
-      <section class="top-seller" id="/bot">
+      <section class="top-seller" id="#bot">
         <div class="container">
 
           <h2 class="h2 top-seller-title">
