--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
                 <a href="#about" class="navbar-link">About</a>
               </li>
               <li>
-                <a href="#bot" class="navbar-link">Bots</a>
+                <a href="bot" class="navbar-link">Bots</a>
               </li>
 
               <li>
@@ -122,7 +122,7 @@
             </p>
 
             <div class="btn-group">
-              <form action="#bot">
+              <form action="bot">
                 <button class="btn btn-primary">Add Our Bots</button>
               </form>
               <form action="/Support">
