--- a/index.html
+++ b/index.html
@@ -129,7 +129,8 @@
                 <button class="btn btn-primary">Support Server</button>
               </form>
             </div>
-
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-4223895243915385"
+     crossorigin="anonymous"></script>
           </div>
 
           <figure class="hero-banner">
