--- a/index.html
+++ b/index.html
@@ -240,7 +240,9 @@
         </div>
       </section>
 
-
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-4223895243915385"
+     crossorigin="anonymous"></script>
+        
 
 
       <!-- 
