--- a/index.html
+++ b/index.html
@@ -242,6 +242,14 @@
 
 <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-4223895243915385"
      crossorigin="anonymous"></script>
+<ins class="adsbygoogle"
+     style="display:block"
+     data-ad-format="autorelaxed"
+     data-ad-client="ca-pub-4223895243915385"
+     data-ad-slot="5217811275"></ins>
+<script>
+     (adsbygoogle = window.adsbygoogle || []).push({});
+</script>
         
 
 
