--- a/index.html
+++ b/index.html
@@ -90,8 +90,6 @@
 
         </div>
         
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-4223895243915385"
-     crossorigin="anonymous"></script>
         
         <div class="header-actions">
 <form action="/Login">
@@ -106,7 +104,17 @@
   </header>
 
 
-
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-4223895243915385"
+     crossorigin="anonymous"></script>
+<ins class="adsbygoogle"
+     style="display:block"
+     data-ad-format="fluid"
+     data-ad-layout-key="-g9-i+2a-7n+9v"
+     data-ad-client="ca-pub-4223895243915385"
+     data-ad-slot="6984558201"></ins>
+<script>
+     (adsbygoogle = window.adsbygoogle || []).push({});
+</script>
 
 
   <main>
