--- a/index.html
+++ b/index.html
@@ -227,14 +227,15 @@
 
         </div>
       </section>
-
 <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-4223895243915385"
      crossorigin="anonymous"></script>
+<!-- Sponsor -->
 <ins class="adsbygoogle"
      style="display:block"
-     data-ad-format="autorelaxed"
      data-ad-client="ca-pub-4223895243915385"
-     data-ad-slot="5217811275"></ins>
+     data-ad-slot="3652652005"
+     data-ad-format="auto"
+     data-full-width-responsive="true"></ins>
 <script>
      (adsbygoogle = window.adsbygoogle || []).push({});
 </script>
