--- a/index.html
+++ b/index.html
@@ -228,7 +228,8 @@
         </div>
       </section>
      
-      <p>
+       <div class="ads">
+      <div class="center">
 <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-4223895243915385"
      crossorigin="anonymous"></script>
 <!-- Sponsor -->
@@ -241,7 +242,8 @@
 <script>
      (adsbygoogle = window.adsbygoogle || []).push({});
 </script>
-        </p>
+      </div>
+       </div>
 
       
       <!-- 
