--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
                 <a href="#about" class="navbar-link">About</a>
               </li>
               <li>
-                <a href="bot" class="navbar-link">Bots</a>
+                <a href="#bots" class="navbar-link">Bots</a>
               </li>
 
               <li>
@@ -114,7 +114,7 @@
             </p>
 
             <div class="btn-group">
-              <form action="bot">
+              <form action="#bots">
                 <button class="btn btn-primary">Add Our Bots</button>
               </form>
               <form action="/Support">
@@ -241,7 +241,7 @@
         - #Developers 
       -->
 
-      <section class="top-seller" id="bot">
+      <section class="top-seller" id="bots">
         <div class="container">
 
           <h2 class="h2 top-seller-title">
