--- a/Home.html
+++ b/Home.html
@@ -241,7 +241,7 @@
         - #Developers 
       -->
 
-      <section class="top-seller" id="#bots">
+      <section class="top-seller" id="bots">
         <div class="container">
 
           <h2 class="h2 top-seller-title">
