--- a/index.html
+++ b/index.html
@@ -129,7 +129,8 @@
 
         </div>
       </section>
-
+<script src="https://static.elfsight.com/platform/platform.js" data-use-service-core defer></script>
+<div class="elfsight-app-95af0792-06dd-40b2-bc15-200addef330b" data-elfsight-app-lazy></div>
 
       <!-- 
         - #ABOUT
