--- a/Chat.html
+++ b/Chat.html
@@ -4,12 +4,11 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>24/7 Support Chat</title>
-    <!-- Tawk.to widget code goes here -->
     <script type="text/javascript">
         var Tawk_API = Tawk_API || {};
         Tawk_API.visitor = {
             name: 'Guest',
-            email: 'guest@example.com'
+            email: 'Example@example.com'
             // You can customize the visitor information here
         };
         Tawk_API.onLoad = function () {
