--- a/Chat.html
+++ b/Chat.html
@@ -4,6 +4,13 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>24/7 Support Chat</title>
+
+    
+</head>
+<body>
+    <h1>LYNX STUDIOS LIVE SUPPORT</h1>
+    <p>Welcome to our website! If you need assistance, feel free to ask in the chat.</p>
+
     <script type="text/javascript">
         var Tawk_API = Tawk_API || {};
         Tawk_API.visitor = {
@@ -27,10 +34,5 @@ s0.parentNode.insertBefore(s1,s0);
 })();
 </script>
     
-</head>
-<body>
-    <h1>Your Website</h1>
-    <p>Welcome to our website! If you need assistance, feel free to ask in the chat.</p>
-
 </body>
 </html>
