--- a/Chat.html
+++ b/Chat.html
@@ -35,4 +35,29 @@ s0.parentNode.insertBefore(s1,s0);
 </script>
     
 </body>
+    <style>
+    #white{
+      color: #DBE9FA
+    }
+    #red{
+      color: #DBE9FA
+    }
+    #yellow{
+      color: #DBE9FA
+    }
+    p {
+      font-family:tahoma;
+      font-size: 17px;
+      color: #000000  ;
+    }
+    body {
+      background : #DBE9FA ;
+      padding:  64px;
+      text-align: center;
+    }
+    h1{
+      color: #DBE9FA
+      font-family: tahoma;
+    }
+  </style>
 </html>
