--- a/Chat.html
+++ b/Chat.html
@@ -9,7 +9,7 @@
 </head>
 <body>
     <h1>LYNX STUDIOS LIVE SUPPORT</h1>
-    <p>Welcome to our website! If you need assistance, feel free to ask in the chat.</p>
+    <p>Welcome to our LIVE SUPPORT! If you need assistance, feel free to ask in the chat.</p>
 
     <script type="text/javascript">
         var Tawk_API = Tawk_API || {};
