--- a/Chat.html
+++ b/Chat.html
@@ -11,17 +11,7 @@
     <h1>LYNX STUDIOS LIVE SUPPORT</h1>
     <p>Welcome to our LIVE SUPPORT! If you need assistance, feel free to ask in the chat.</p>
 
-    <script type="text/javascript">
-        var Tawk_API = Tawk_API || {};
-        Tawk_API.visitor = {
-            name: 'Guest',
-            email: 'Example@example.com'
-            // You can customize the visitor information here
-        };
-        Tawk_API.onLoad = function () {
-            Tawk_API.toggle();
-        };
-
+ <!--Start of Tawk.to Script-->
 <script type="text/javascript">
 var Tawk_API=Tawk_API||{}, Tawk_LoadStart=new Date();
 (function(){
@@ -33,6 +23,7 @@ s1.setAttribute('crossorigin','*');
 s0.parentNode.insertBefore(s1,s0);
 })();
 </script>
+<!--End of Tawk.to Script-->
     
 </body>
     <style>
