--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
               </li>
 
               <li>
-                <a href="#" class="navbar-link">Contact Us</a>
+                <a href="/live-support" class="navbar-link">24/7 Live Chat</a>
               </li>
               
             </ul>
