--- a/Login.html
+++ b/Login.html
@@ -2,7 +2,7 @@
 <head>
 <meta charset="utf-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-<meta http-equiv="refresh" content="0; url=https://discord.com/api/oauth2/authorize?client_id=1185313930566979714&response_type=code&redirect_uri=https%3A%2F%2Flynxstudios.xyz%2FHome&scope=identify+guilds" />
+<meta http-equiv="refresh" content="0; url=https://discord.com/api/oauth2/authorize?client_id=1185313930566979714&response_type=code&redirect_uri=https%3A%2F%2Flynxstudios.xyz%2F&scope=identify+guilds" />
   <title>Login</title>
 </head>
 </html>
