--- a/index.html
+++ b/index.html
@@ -10,19 +10,13 @@
   <meta name="google-adsense-account" content="ca-pub-4223895243915385">
   <title>LYNX STUDIOS</title>
 
-  <!-- 
-    - favicon
-  -->
+  <!--favicon-->
   <link rel="shortcut icon" href="/BOTLOGO111.jpg" type="image/x-icon">
 
-  <!-- 
-    - custom css link
-  -->
+  <!--custom css link-->
   <link rel="stylesheet" href="./assets/css/style.css">
 
-  <!-- 
-    - google font link
-  -->
+  <!--google font link-->
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;500;700&display=swap" rel="stylesheet">
