--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
 <head>
  <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-4223895243915385"
-     crossorigin="anonymous"></script>>
+ crossorigin="anonymous"></script>>
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -24,9 +24,7 @@
 
 <body id="top">
 
-  <!-- 
-    - #HEADER
-  -->
+  <!--#HEADER-->
 
   <header>
 
