--- a/index.html
+++ b/index.html
@@ -2,8 +2,14 @@
 <html lang="en">
 
 <head>
- <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-4223895243915385"
-     crossorigin="anonymous"></script>
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-F5Y9LTPEWD"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag() {dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-F5Y9LTPEWD');
+</script>
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -12,10 +18,10 @@
 
   <link rel="shortcut icon" href="/BOTLOGO111.jpg" type="image/x-icon">
 
-  <!--custom css link-->
+
   <link rel="stylesheet" href="./assets/css/style.css">
 
-  <!--google font link-->
+ 
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;500;700&display=swap" rel="stylesheet">
