--- a/Terms.html
+++ b/Terms.html
@@ -1,5 +1,7 @@
 <html>
 <head>
+  <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-4223895243915385"
+     crossorigin="anonymous"></script>
 <title>Lynx Studios TOS</title>
 </head>
   <link rel="shortcut icon" href="/botxw123.png" type="image/x-icon">
