--- a/index.html
+++ b/index.html
@@ -420,6 +420,10 @@
               <a href="#" class="footer-link">Contact</a>
             </li>
 
+             <li class="footer-item">
+              <a href="/status" class="footer-link">Status</a>
+            </li>
+
           </ul>
 
           <ul class="footer-list">
