--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
               </li>
 
               <li>
-                <a href="/Terms" class="navbar-link">Legal</a>
+                <a href="/legal/Terms.html" class="navbar-link">Legal</a>
               </li>
 
               <li>
