--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
               </li>
 
               <li>
-                <a href="/legal/Terms.html" class="navbar-link">Legal</a>
+                <a href="/legal/terms.html" class="navbar-link">Legal</a>
               </li>
 
               <li>
@@ -450,11 +450,11 @@
             </li>
 
             <li class="footer-item">
-              <a href="Terms" class="footer-link">Terms of Service</a>
+              <a href="/legal/terms.html" class="footer-link">Terms of Service</a>
             </li>
 
             <li class="footer-item">
-              <a href="privacy" class="footer-link">Privacy Policy</a>
+              <a href="/legal/privacy.html" class="footer-link">Privacy Policy</a>
             </li>
 
             <li class="footer-item">
