--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
               </li>
 
               <li>
-                <a href="" class="navbar-link">Premuim</a>
+                <a href="/Premuim" class="navbar-link">Premuim</a>
               </li>
 
               <li>
