--- a/Premuim.html
+++ b/Premuim.html
@@ -23,7 +23,7 @@
 
 
   
-    &copy; 2023 - 2024 <a href="https://lynxstudios.xyz/">LYNX STUDIOS</a> all rights reserved
+   <big><p> &copy; 2023 - 2024 <a href="https://lynxstudios.xyz/">LYNX STUDIOS</a> all rights reserved
   </big></p>
 
 
