--- a/Premuim.html
+++ b/Premuim.html
@@ -9,7 +9,8 @@
   <li>
     <a href="https://lynxstudios.xyz/" class="navbar-link">Home</a>
   </li>
-<p>COMING SOON....</p>
+     <title>LYNX STUDIOS PREMUIM</title>
+<h1>COMING SOON....</h1>
 
 
 
