--- a/Premuim.html
+++ b/Premuim.html
@@ -10,7 +10,8 @@
     <a href="https://lynxstudios.xyz/" class="navbar-link">Home</a>
   </li>
      <title>LYNX STUDIOS PREMUIM</title>
-<h1>COMING SOON....</h1>
+<h1>Lynx Studios PREMUIM</h1>
+     <h2>COMING SOON....</h2>
 
 
 
