--- a/Premuim.html
+++ b/Premuim.html
@@ -5,13 +5,9 @@
 <title>Lynx Studios PREMUIM</title>
 </head>
   <link rel="shortcut icon" href="/botxw123.png" type="image/x-icon">
-
-  <li>
-    <a href="https://lynxstudios.xyz/" class="navbar-link">Home</a>
-  </li>
      <title>LYNX STUDIOS PREMUIM</title>
-<h1>Lynx Studios PREMUIM</h1>
-     <h2>COMING SOON....</h2>
+<h1>PREMUIM</h1>
+<h2>COMING SOON....</h2>
 
 
 
