--- a/Premuim.html
+++ b/Premuim.html
@@ -1,31 +1,54 @@
-<html>
+<!DOCTYPE html>
+<html lang="en">
 <head>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-4223895243915385"
-     crossorigin="anonymous"></script>
-<title>Lynx Studios PREMUIM</title>
+    <meta charset="UTF-8">
+    <title>My Online Shop</title>
+    <!-- Add link to CSS file -->
+    <link rel="stylesheet" href="style.css">
 </head>
-  <link rel="shortcut icon" href="/botxw123.png" type="image/x-icon">
-     <title>LYNX STUDIOS PREMUIM</title>
-<h1>PREMUIM</h1>
-<h2>COMING SOON....</h2>
+<body>
+    <header>
+        <h1>Welcome to My Online Shop</h1>
+        <!-- Navigation, search bar, etc. -->
+    </header>
 
+    <main>
+        <section class="product-list">
+            <article class="product">
+                <img src="path-to-image1.jpg" alt="Product 1">
+                <h2>VIP</h2>
+                <p>Product 1 description...</p>
+                <p>Price: 3.99/MONTH</p>
+                <button>Add to Cart</button>
+            </article>
 
+            <article class="product">
+                <img src="path-to-image2.jpg" alt="Product 2">
+                <h2>VIP+</h2>
+                <p>Product 2 description...</p>
+                <p>Price: $9.99/MONTH</p>
+                <button>Add to Cart</button>
+            </article>
 
+          <article class="product">
+              <img src="path-to-image1.jpg" alt="Product 1">
+              <h2>VIP++</h2>
+              <p>Product 1 description...</p>
+              <p>Price: $15.00/MONTH</p>
+              <button>Add to Cart</button>
+          </article>
+          
+            <!-- Repeat for other products -->
+        </section>
+    </main>
 
-
-
-
-
-
-
-
-
-  
+    <footer>
+         
    <big><p> &copy; 2023 - 2024 <a href="https://lynxstudios.xyz/">LYNX STUDIOS</a> all rights reserved
   </big></p>
-
-
-  <style>
+    </footer>
+</body>
+       <style>
     #white{
       color: #DBE9FA
     }
@@ -50,3 +73,19 @@
       font-family: tahoma;
     }
   </style>
+</html>
+
+
+
+
+
+
+
+
+
+
+
+
+  
+   <big><p> &copy; 2023 - 2024 <a href="https://lynxstudios.xyz/">LYNX STUDIOS</a> all rights reserved
+  </big></p>
