--- a/Premuim.html
+++ b/Premuim.html
@@ -19,7 +19,8 @@
                 <h2>VIP</h2>
                 <p>Product 1 description...</p>
                 <p>Price: 3.99/MONTH</p>
-                <button>Add to Cart</button>
+                <form action="">
+                    <button class="btn btn-primary">Add to Cart</button></form>
             </article>
 
             <article class="product">
@@ -27,7 +28,8 @@
                 <h2>VIP+</h2>
                 <p>Product 2 description...</p>
                 <p>Price: $9.99/MONTH</p>
-                <button>Add to Cart</button>
+                 <form action="">
+                    <button class="btn btn-primary">Add to Cart</button></form>
             </article>
 
           <article class="product">
@@ -35,7 +37,8 @@
               <h2>VIP++</h2>
               <p>Product 1 description...</p>
               <p>Price: $15.00/MONTH</p>
-              <button>Add to Cart</button>
+              <form action="">
+                    <button class="btn btn-primary">Add to Cart</button></form>
           </article>
           
             <!-- Repeat for other products -->
