--- a/Premuim.html
+++ b/Premuim.html
@@ -97,3 +97,5 @@
     }
   </style>
 </html>
+<big><p> &copy; 2023 - 2024 <a href="https://lynxstudios.xyz/">LYNX STUDIOS</a> all rights reserved
+  </big></p>
