--- a/Premuim.html
+++ b/Premuim.html
@@ -28,7 +28,7 @@
 </head>
 <body>
     <header>
-        <h1>Welcome to My Online Shop</h1>
+        <h1>PREMUIM</h1>
         <!-- Navigation, search bar, etc. -->
     </header>
 
