--- a/Premuim.html
+++ b/Premuim.html
@@ -70,31 +70,45 @@
    
     </footer>
 </body>
-       <style>
-    #white{
-      color: #DBE9FA
-    }
-    #red{
-      color: #DBE9FA
-    }
-    #yellow{
-      color: #DBE9FA
-    }
-    p {
-      font-family:tahoma;
-      font-size: 17px;
-      color: #000000  ;
-    }
-    body {
-      background : #DBE9FA ;
-      padding:  64px;
-      text-align: center;
-    }
-    h1{
-      color: #DBE9FA
-      font-family: tahoma;
-    }
-  </style>
+       body {
+    font-family: Arial, sans-serif;
+}
+
+header {
+    background: #f0f0f0;
+    padding: 10px 0;
+    text-align: center;
+}
+
+.product-list {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+    padding: 20px;
+}
+
+.product {
+    border: 1px solid #ddd;
+    border-radius: 8px;
+    margin: 10px;
+    padding: 10px;
+    width: 200px;
+    text-align: center;
+}
+
+.product img {
+    max-width: 100%;
+    height: auto;
+}
+
+footer {
+    background: #f0f0f0;
+    text-align: center;
+    padding: 10px 0;
+    position: fixed;
+    bottom: 0;
+    width: 100%;
+}
 </html>
 <big><p> &copy; 2023 - 2024 <a href="https://lynxstudios.xyz/">LYNX STUDIOS</a> all rights reserved
   </big></p>
