--- a/Premuim.html
+++ b/Premuim.html
@@ -19,7 +19,7 @@
   <link rel="shortcut icon" href="/BOTLOGO111.jpg" type="image/x-icon">
 
 
-  <link rel="stylesheet" href="./assets/css/GG">">
+  <link rel="stylesheet" href="/assets/css/sty.css">
 
  
   <link rel="preconnect" href="https://fonts.googleapis.com">
