--- a/Premuim.html
+++ b/Premuim.html
@@ -35,25 +35,25 @@
     <main>
         <section class="product-list">
             <article class="product">
-                <img src="path-to-image1.jpg" alt="Product 1">
+                <img src="/vip.jpg" alt="Product 1">
                 <h2>VIP</h2>
-                <p>Product 1 description...</p>
+                <p></p>
                 <p>Price: 3.99/MONTH</p>
                 <form action="">
                     <button class="btn btn-primary">Add to Cart</button></form>
             </article>
 
             <article class="product">
-                <img src="path-to-image2.jpg" alt="Product 2">
+                <img src="/vip+.jpg" alt="Product 2">
                 <h2>VIP+</h2>
-                <p>Product 2 description...</p>
+                <p></p>
                 <p>Price: $9.99/MONTH</p>
                  <form action="">
                     <button class="btn btn-primary">Add to Cart</button></form>
             </article>
 
           <article class="product">
-              <img src="path-to-image1.jpg" alt="Product 1">
+              <img src="/vip++.jpg" alt="Product 1">
               <h2>VIP++</h2>
               <p>Product 1 description...</p>
               <p>Price: $15.00/MONTH</p>
