--- a/Premuim.html
+++ b/Premuim.html
@@ -38,9 +38,9 @@
                 <img src="/vip.jpg" alt="Product 1">
                 <h2>VIP</h2>
                 <p></p>
-                <p>Price: 3.99/MONTH</p>
+                <p>Price: 3.99</p>
                 <form action="">
-                    <button class="btn btn-primary">Add to Cart</button></form>
+                    <button class="btn btn-primary">Buy Now</button></form>
             </article>
 
             <article class="product">
@@ -49,7 +49,7 @@
                 <p></p>
                 <p>Price: $9.99/MONTH</p>
                  <form action="">
-                    <button class="btn btn-primary">Add to Cart</button></form>
+                    <button class="btn btn-primary">Buy Now</button></form>
             </article>
 
           <article class="product">
@@ -58,7 +58,7 @@
               <p></p>
               <p>Price: $15.00/MONTH</p>
               <form action="">
-                    <button class="btn btn-primary">Add to Cart</button></form>
+                    <button class="btn btn-primary">Buy Now</button></form>
           </article>
           
             <!-- Repeat for other products -->
