--- a/Premuim.html
+++ b/Premuim.html
@@ -39,7 +39,7 @@
                 <h2>VIP</h2>
                 <p></p>
                 <p>Price: 3.99</p>
-                <form action="">
+                <form action="https://cash.app/$DumbassNickk">
                     <button class="btn btn-primary">Buy Now</button></form>
             </article>
 
@@ -48,7 +48,7 @@
                 <h2>VIP+</h2>
                 <p></p>
                 <p>Price: $9.99/MONTH</p>
-                 <form action="">
+                 <form action="https://cash.app/$DumbassNickk">
                     <button class="btn btn-primary">Buy Now</button></form>
             </article>
 
@@ -57,7 +57,7 @@
               <h2>VIP++</h2>
               <p></p>
               <p>Price: $15.00/MONTH</p>
-              <form action="">
+              <form action="https://cash.app/$DumbassNickk">
                     <button class="btn btn-primary">Buy Now</button></form>
           </article>
           
