--- a/Premuim.html
+++ b/Premuim.html
@@ -40,7 +40,7 @@
                 <p></p>
                 <p>Price: 3.99</p>
                 <form action="https://cash.app/$DumbassNickk">
-                    <button class="btn btn-primary">Buy Now</button></form>
+                    <button class="button">Buy Now</button></form>
             </article>
 
             <article class="product">
@@ -49,7 +49,7 @@
                 <p></p>
                 <p>Price: $9.99/MONTH</p>
                  <form action="https://cash.app/$DumbassNickk">
-                    <button class="btn btn-primary">Buy Now</button></form>
+                    <button class="button">Buy Now</button></form>
             </article>
 
           <article class="product">
@@ -58,7 +58,7 @@
               <p></p>
               <p>Price: $15.00/MONTH</p>
               <form action="https://cash.app/$DumbassNickk">
-                    <button class="btn btn-primary">Buy Now</button></form>
+                    <button class="button">Buy Now</button></form>
           </article>
           
             <!-- Repeat for other products -->
