--- a/Terms.html
+++ b/Terms.html
@@ -1,10 +1,31 @@
-<html>
+<!DOCTYPE html>
+<html lang="en">
+
 <head>
-  <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-4223895243915385"
-     crossorigin="anonymous"></script>
-<title>Lynx Studios TOS</title>
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-F5Y9LTPEWD"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag() {dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-F5Y9LTPEWD');
+</script>
+  <meta charset="UTF-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta name="google-adsense-account" content="ca-pub-4223895243915385">
+  <title>LYNX STUDIOS</title>
+
+  <link rel="shortcut icon" href="/BOTLOGO111.jpg" type="image/x-icon">
+
+
+  <link rel="stylesheet" href="./assets/css/style.css">
+
+ 
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;500;700&display=swap" rel="stylesheet">
 </head>
-  <link rel="shortcut icon" href="/botxw123.png" type="image/x-icon">
 
   <a href="#" class="logo">
     <img src="/botxw.png" alt="">
