--- a/Terms.html
+++ b/Terms.html
@@ -89,8 +89,7 @@
   
   <p><big>10. Contact Information</big></p>
 
-  <p>If you have any questions or concerns about these Terms of Service, please contact us at <button class="">Support@lynxstudios.xyz</button></form>
-  <form action="mail.google.com"></p>
+  <p>If you have any questions or concerns about these Terms of Service, please contact us at <a href="mailto:support@lynxstudio.xyz?subject=Privacy%20Policy" class="link-3">support@lynxstudio.xyz</a></p>
   
   <p>By using Lynx Studios, you agree to these terms and conditions. If you do not agree to abide by these terms, please do not use the bots.</p>
   
