--- a/Terms.html
+++ b/Terms.html
@@ -45,7 +45,7 @@
    <p>By accessing or using the website associated with the LynxStudios Discord bots (the "Service"), you agree to comply with and be bound by these Terms of Service.</p>
   <p>=====================================================================================================</p>
   
-  <p><big>2. Description of Service</big></p>
+  <strong></strong>2. Description of Service</strong>
   
    <p>The Service is a platform that provides features and information related to LynxStudios.
 </p>
