--- a/index.html
+++ b/index.html
@@ -327,7 +327,7 @@
 
                 <div class="card-content">
                   <h3 class="h5 card-title">Coming Soon..</h3>
-
+                  <p>Status: Offline</p>
                   <data></data>
                 </div>
 
