--- a/index.html
+++ b/index.html
@@ -305,6 +305,7 @@
 
                 <div class="card-content">
                   <h3 class="h5 card-title">UnoCord℠</h3>
+                  <p>Status: 🟢 ONLINE</p>
 
                   <data></data>
                 </div>
