--- a/legal/terms.html
+++ b/legal/terms.html
@@ -68,7 +68,7 @@
 
   <p><big>10. Contact Information</big></p>
 
-  <p>If you have any questions or concerns about these Terms of Service, please contact us at <a href="mailto:info@example.com" class="cta-button">Email Us</a></form>
+  <p>If you have any questions or concerns about these Terms of Service, please contact us at <a href="mailto:support@lynxstudios.xyz" class="cta-button">Contact Us</a></form>
   <form action="mail.google.com"></p>
     
   <p>By using Lynx Studios, you agree to these terms and conditions. If you do not agree to abide by these terms, please do not use the bots.</p>
