--- a/legal/terms.html
+++ b/legal/terms.html
@@ -11,7 +11,7 @@
   </a>
 
   <li>
-    <a href="https://lynxstudios.swayzefn2.repl.co/Home" class="navbar-link">Home</a>
+    <a href="https://www.lynxstudios.xyz/" class="navbar-link">Home</a>
   </li>
 
 <p><big><header>--Terms of Service--</header></big></p>
@@ -77,7 +77,7 @@
 
 
   <p><big></big> 
-    &copy; 2023 - 2024 <a href="https://lynxstudios.swayzefn2.repl.co/#">LYNX STUDIOS</a> all rights reserved
+    &copy; 2023 - 2024 <a href="https://www.lynxstudios.xyz/">LYNX STUDIOS</a> all rights reserved
   </big></p>
 
 
