--- a/legal/privacy.html
+++ b/legal/privacy.html
@@ -11,7 +11,7 @@
   </a>
 
   <li>
-    <a href="https://lynxstudios.swayzefn2.repl.co/Home.html" class="navbar-link">Home</a>
+    <a href="https://www.lynxstudios.xyz/" class="navbar-link">Home</a>
   </li>
 <p><big>--Privacy Policy--</big></p>
 <p><big>Effective Date:&nbsp;December 19,2023</big></p>
@@ -41,7 +41,7 @@
 
 
 
-    &copy; 2023 - 2024 <a href="https://lynxstudios.swayzefn2.repl.co/Home">LYNX STUDIOS</a> all rights reserved
+    &copy; 2023 - 2024 <a href="https://www.lynxstudios.xyz/">LYNX STUDIOS</a> all rights reserved
   </big></p>
 
 
