--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
   <meta name="google-adsense-account" content="ca-pub-4223895243915385">
   <title>Lynx-Studios</title>
 
-  <link rel="shortcut icon" href="/BOTLOGO111.jpg" type="image/x-icon">
+  <link rel="shortcut icon" href="/lynxw.png" type="image/x-icon">
 
 
   <link rel="stylesheet" href="./assets/css/style.css">
