--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
     <div class="container">
 
       <a href="#" class="logo">
-        <img src="/lynxw.png" alt="">
+        <img src="/lynxw1.png" alt="">
       </a>
 
       <div class="header-right">
