--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta name="google-adsense-account" content="ca-pub-4223895243915385">
-  <title>Lynx-Studios</title>
+  <title>Lynx Studios</title>
 
   <link rel="shortcut icon" href="/lynxw.png" type="image/x-icon">
 
