--- a/index.html
+++ b/index.html
@@ -229,7 +229,7 @@
                 <div class="card-number">AD</div>
 
                 <figure class="card-avatar">
-                  <img src="/epicbotx150.jpg" alt="">
+                  <img src="/freemovies.jpg" alt="">
 
                   <div class="avatar-badge">
                     <ion-icon name="checkmark-outline"></ion-icon>
