--- a/index.html
+++ b/index.html
@@ -237,9 +237,10 @@
                 </figure>
 
                 <div class="card-content">
-                  <h3 class="h5 card-title">EpicBot</h3>
+                  <h3 class="h5 card-title"></h3>
 
-                  <data></data>
+                  <data>
+                  </data>
                 </div>
 
               </a>
