--- a/index.html
+++ b/index.html
@@ -220,7 +220,7 @@
       </section>
       
       <a href="#">
-        <img src="/freemovies.jpg" alt="">
+        <img src="/freemovies1.jpg" alt="">
       </a>
          
       <!-- 
