--- a/index.html
+++ b/index.html
@@ -220,7 +220,7 @@
       </section>
 
       <div class="ad-a">
-      <a href="#">
+      <a href="https://watchfumovies.com/">
         <img src="/freemovies12.jpg" alt="" class="ad-a">
       </a>
       </div>
