--- a/index.html
+++ b/index.html
@@ -221,7 +221,7 @@
 
       <div class="ad-a">
       <a href="https://watchfumovies.com/">
-        <img src="/freemovies12.jpg" alt="" class="ad-a">
+        <img src="/freemov1.jpg" alt="" class="ad-a">
       </a>
       </div>
       
