--- a/index.html
+++ b/index.html
@@ -40,12 +40,13 @@
     </script>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width">
-  <meta name="description" content="OFFICIAL WEBSITE FOR LYNX STUDIOS PLATFORM">
+  <meta name="description" content="OFFICIAL WEBSITE FOR LYNX STUDIOS SERVICES">
   <meta property="og:title" content="Lynx Studios - Platform">
   <meta property="og:url" content="https://lynxstudios.xyz/">
   <meta property="og:type" content="website">
-  <meta property="og:description" content="OFFICIAL WEBSITE FOR LYNX STUDIOS">
+  <meta property="og:description" content="OFFICIAL WEBSITE FOR LYNX STUDIOS SERVICES">
   <meta name="theme-color" content="#4071A8">
+  <meta name="keywords" content="LYNX STUDIOS, EpicBot, lynxstudios, lynx studios llc, LYNX STUDIOS LLC, discord bots ">
   <title>Lynx Studios</title>
   <link rel="shortcut icon" href="/lynxw1.png" type="image/x-icon">
   <link rel="stylesheet" href="./assets/css/style.css">
