--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
   <meta property="og:description" content="OFFICIAL WEBSITE FOR LYNX STUDIOS SERVICES">
   <meta name="theme-color" content="#4071A8">
   <meta name="keywords" content="LYNX STUDIOS, EpicBot, lynxstudios, lynx studios llc, LYNX STUDIOS LLC, discord bots ">
-  <title>Lynx Studios</title>
+  <title>LYNX STUDIOS | HOME</title>
   <link rel="shortcut icon" href="/lynxw1.png" type="image/x-icon">
   <link rel="stylesheet" href="./assets/css/style.css">
 </head>
