--- a/legal/terms.html
+++ b/legal/terms.html
@@ -2,7 +2,7 @@
 <head>
   <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-4223895243915385"
      crossorigin="anonymous"></script>
-<title>Lynx Studios TOS</title>
+<title>LYNX STUDIOS | TOS</title>
 </head>
   <link rel="shortcut icon" href="/botxw123.png" type="image/x-icon">
 
