--- a/legal/privacy.html
+++ b/legal/privacy.html
@@ -2,7 +2,8 @@
 <head>
 <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-4223895243915385"
      crossorigin="anonymous"></script>
-<title>LYNX STUDIOS | PRIVACY</title>
+     <meta name="description" content="Shows The Privacy Policy For Lynx Studios">
+<title>Privacy Policy</title>
 </head>
   <link rel="shortcut icon" href="/botxw123.png" type="image/x-icon">
 
