--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
   <meta name="theme-color" content="#4071A8">
   <meta name="keywords" content="LYNX STUDIOS, EpicBot, lynxstudios, lynx studios llc, LYNX STUDIOS LLC, discord bots ">
   <title>LYNX STUDIOS | HOME</title>
-  <link rel="shortcut icon" href="/lynxw1.png" type="image/x-icon">
+  <link rel="shortcut icon" href="www.lynxstudios.xyz/lynxw1.png" type="image/x-icon">
   <link rel="stylesheet" href="./assets/css/style.css">
 </head>
 
@@ -78,7 +78,7 @@
     <div class="container">
 
       <a href="#" class="logo">
-        <img src="/lynxw1.png" alt="">
+        <img src="www.lynxstudios.xyz/lynxw1.png" alt="">
       </a>
 
       <div class="header-right">
