--- a/Premuim.html
+++ b/Premuim.html
@@ -1,77 +1,144 @@
-<!DOCTYPE html>
-<html lang="en">
-
-<head>
-<script async src="https://www.googletagmanager.com/gtag/js?id=G-F5Y9LTPEWD"></script>
-<script>
-  window.dataLayer = window.dataLayer || [];
-  function gtag() {dataLayer.push(arguments);}
-  gtag('js', new Date());
-
-  gtag('config', 'G-F5Y9LTPEWD');
-</script>
-  <meta charset="UTF-8">
-  <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <meta name="google-adsense-account" content="ca-pub-4223895243915385">
-  <title>LYNX STUDIOS</title>
-
-  <link rel="shortcut icon" href="/BOTLOGO111.jpg" type="image/x-icon">
-
-
-  <link rel="stylesheet" href="/assets/css/sty.css">
-
- 
-  <link rel="preconnect" href="https://fonts.googleapis.com">
-  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;500;700&display=swap" rel="stylesheet">
+<html><head><base href="https://lynxstudios.xyz/Premuim">
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <title>LYNX STUDIOS | Premium</title>
+    <link rel="shortcut icon" href="/lynxw1.png" type="image/x-icon">
+    <style>
+        body, html {
+            margin: 0;
+            padding: 0;
+            font-family: Arial, sans-serif;
+            background-color: #1a1a1a;
+            color: #ffffff;
+        }
+        header {
+            background-color: #2c2c2c;
+            padding: 20px 0;
+            text-align: center;
+        }
+        .logo img {
+            width: 100px;
+            height: auto;
+        }
+        nav {
+            margin-top: 20px;
+        }
+        nav a {
+            color: #ffffff;
+            text-decoration: none;
+            margin: 0 15px;
+            font-size: 18px;
+        }
+        .premium-content {
+            max-width: 800px;
+            margin: 50px auto;
+            padding: 0 20px;
+        }
+        h1 {
+            color: #4071A8;
+            text-align: center;
+        }
+        .plan {
+            background-color: #2c2c2c;
+            border-radius: 10px;
+            padding: 20px;
+            margin-bottom: 30px;
+        }
+        .plan h2 {
+            color: #4071A8;
+        }
+        .price {
+            font-size: 24px;
+            font-weight: bold;
+            margin: 10px 0;
+        }
+        ul {
+            list-style-type: none;
+            padding: 0;
+        }
+        li {
+            margin-bottom: 10px;
+        }
+        li::before {
+            content: "✓ ";
+            color: #4071A8;
+        }
+        .btn {
+            display: inline-block;
+            padding: 10px 20px;
+            background-color: #4071A8;
+            color: white;
+            text-decoration: none;
+            border-radius: 5px;
+            font-weight: bold;
+            margin-top: 20px;
+        }
+        footer {
+            background-color: #2c2c2c;
+            text-align: center;
+            padding: 20px 0;
+            margin-top: 50px;
+        }
+    </style>
 </head>
 <body>
     <header>
-        <h1>PREMUIM</h1>
-        <!-- Navigation, search bar, etc. -->
+        <div class="logo">
+            <img src="/lynxw1.png" alt="Lynx Studios Logo">
+        </div>
+        <nav>
+            <a href="/">Home</a>
+            <a href="/#about">About</a>
+            <a href="/#bots">Bots</a>
+            <a href="/Premuim">Premium</a>
+            <a href="/legal/terms">Legal</a>
+            <a href="/live-support">24/7 Live Chat</a>
+        </nav>
     </header>
 
-    <main>
-        <section class="product-list">
-            <article class="product">
-                <img src="/vip.jpg" alt="Product 1">
-                <h2>VIP</h2>
-                <p>----------</p>
-                <p></p>
-                <p>Price: 3.99</p>
-                <form action="https://cash.app/$DumbassNickk">
-                    <button class="button">Buy Now</button></form>
-            </article>
+    <div class="premium-content">
+        <h1>LYNX STUDIOS Premium Plans</h1>
+        
+        <div class="plan">
+            <h2>Basic Premium</h2>
+            <p class="price">$4.99/month</p>
+            <ul>
+                <li>Access to all premium commands</li>
+                <li>Priority support</li>
+                <li>Custom role in our support server</li>
+                <li>Ad-free experience</li>
+            </ul>
+            <a href="#" class="btn">Select Plan</a>
+        </div>
 
-            <article class="product">
-                <img src="/vip+.jpg" alt="Product 2">
-                <h2>VIP+</h2>
-                <p>----------</p>
-                <p></p>
-                <p>Price: $9.99/MONTH</p>
-                 <form action="https://cash.app/$DumbassNickk">
-                    <button class="button">Buy Now</button></form>
-            </article>
+        <div class="plan">
+            <h2>Pro Premium</h2>
+            <p class="price">$9.99/month</p>
+            <ul>
+                <li>All Basic Premium features</li>
+                <li>Early access to new features</li>
+                <li>Increased usage limits</li>
+                <li>Custom bot status</li>
+                <li>Priority feature requests</li>
+            </ul>
+            <a href="#" class="btn">Select Plan</a>
+        </div>
 
-          <article class="product">
-              <img src="/vip++.jpg" alt="Product 1">
-              <h2>VIP++</h2>
-              <p>----------</p>
-              <p></p>
-              <p>Price: $15.00/MONTH</p>
-              <form action="https://cash.app/$DumbassNickk">
-                    <button class="button">Buy Now</button></form>
-          </article>
-          
-            <!-- Repeat for other products -->
-        </section>
-    </main>
+        <div class="plan">
+            <h2>Ultimate Premium</h2>
+            <p class="price">$19.99/month</p>
+            <ul>
+                <li>All Pro Premium features</li>
+                <li>Dedicated support channel</li>
+                <li>Custom command creation</li>
+                <li>Exclusive Ultimate-only features</li>
+                <li>Monthly strategy call with our team</li>
+            </ul>
+            <a href="#" class="btn">Select Plan</a>
+        </div>
+    </div>
 
     <footer>
-         <big><p> &copy; 2023 - 2024 <a href="https://lynxstudios.xyz/">LYNX STUDIOS</a> all rights reserved
-  </big></p>
-   
+        <p>&copy; 2023 - 2024 LYNX STUDIOS. All rights reserved.</p>
     </footer>
-</body>
-</html>
+</body></html>
