--- a/legal/terms.html
+++ b/legal/terms.html
@@ -1,109 +1,115 @@
-<html>
-<head>
-  <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-4223895243915385"
-     crossorigin="anonymous"></script>
-  <meta name="description" content="Shows The Terms Of Service For Lynx Studios">
-<title>Terms Of Service</title>
+<html><head><base href="https://lynxstudios.xyz/legal/terms">
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <title>LYNX STUDIOS | Terms of Service</title>
+    <link rel="shortcut icon" href="/lynxw1.png" type="image/x-icon">
+    <style>
+        body, html {
+            margin: 0;
+            padding: 0;
+            font-family: Arial, sans-serif;
+            background-color: #1a1a1a;
+            color: #ffffff;
+            line-height: 1.6;
+        }
+        header {
+            background-color: #2c2c2c;
+            padding: 20px 0;
+            text-align: center;
+        }
+        .logo img {
+            width: 100px;
+            height: auto;
+        }
+        nav {
+            margin-top: 20px;
+        }
+        nav a {
+            color: #ffffff;
+            text-decoration: none;
+            margin: 0 15px;
+            font-size: 18px;
+        }
+        .content {
+            max-width: 800px;
+            margin: 50px auto;
+            padding: 0 20px;
+        }
+        h1 {
+            color: #4071A8;
+            text-align: center;
+        }
+        h2 {
+            color: #4071A8;
+            margin-top: 30px;
+        }
+        p, ul {
+            margin-bottom: 20px;
+        }
+        ul {
+            padding-left: 20px;
+        }
+        footer {
+            background-color: #2c2c2c;
+            text-align: center;
+            padding: 20px 0;
+            margin-top: 50px;
+        }
+    </style>
 </head>
-  <link rel="shortcut icon" href="/botxw123.png" type="image/x-icon">
+<body>
+    <header>
+        <div class="logo">
+            <img src="/lynxw1.png" alt="Lynx Studios Logo">
+        </div>
+        <nav>
+            <a href="/">Home</a>
+            <a href="/#about">About</a>
+            <a href="/#bots">Bots</a>
+            <a href="/Premuim">Premium</a>
+            <a href="/legal/terms">Legal</a>
+            <a href="/live-support">24/7 Live Chat</a>
+        </nav>
+    </header>
 
-  <a href="#" class="logo">
-    <img src="/botxw.png" alt="">
-  </a>
+    <div class="content">
+        <h1>Terms of Service</h1>
 
-  <li>
-    <a href="https://www.lynxstudios.xyz/" class="navbar-link">Home</a>
-  </li>
+        <p>Welcome to LYNX STUDIOS. By using our services, you agree to comply with and be bound by the following terms and conditions:</p>
 
-<p><big><header>--Terms of Service--</header></big></p>
-  <p><big>========================================================================================</big></p>
-   <p><big>Effective Date:December 19,2023</big></p>
-   <p><big>Last Updated:December 19,2023</big></p>
-   <p><big>=========================================================================================</big></p>
-   <p><big>1. Acceptance of Terms</big></p>
+        <h2>1. Acceptance of Terms</h2>
+        <p>By accessing or using LYNX STUDIOS services, including our Discord bots, you agree to these Terms of Service and all applicable laws and regulations.</p>
 
-   <p>By accessing or using the website associated with the LynxStudios Discord bots (the "Service"), you agree to comply with and be bound by these Terms of Service.</p>
-  <p>=====================================================================================================</p>
+        <h2>2. Use of Service</h2>
+        <p>You agree to use our services only for lawful purposes and in accordance with these Terms. You are prohibited from:</p>
+        <ul>
+            <li>Using our services in any way that violates any applicable local, state, national, or international law or regulation</li>
+            <li>Attempting to interfere with, compromise the system integrity or security, or decipher any transmissions to or from the servers running the service</li>
+            <li>Using our services for any purpose that is harmful, threatening, abusive, harassing, defamatory, or otherwise objectionable</li>
+        </ul>
 
-  <p><big>2. Description of Service</big></p>
+        <h2>3. Intellectual Property</h2>
+        <p>The content, features, and functionality of LYNX STUDIOS services are owned by LYNX STUDIOS and are protected by international copyright, trademark, patent, trade secret, and other intellectual property laws.</p>
 
-   <p>The Service is a platform that provides features and information related to LynxStudios.
-</p>
-  <p>=====================================================================================================</p>
+        <h2>4. Limitation of Liability</h2>
+        <p>LYNX STUDIOS shall not be liable for any indirect, incidental, special, consequential or punitive damages, including without limitation, loss of profits, data, use, goodwill, or other intangible losses, resulting from your access to or use of or inability to access or use the services.</p>
 
-   <p><big>3. Use of the Service</big></p>
+        <h2>5. Modifications to Service</h2>
+        <p>LYNX STUDIOS reserves the right to modify or discontinue, temporarily or permanently, the service (or any part thereof) with or without notice.</p>
 
-   <p>You agree to use the Service in accordance with applicable laws, regulations, and these Terms of Service. You may not use the Service for any unlawful or unauthorized purpose.</p>
-  <p>=====================================================================================================</p>
+        <h2>6. Termination</h2>
+        <p>We may terminate or suspend access to our service immediately, without prior notice or liability, for any reason whatsoever, including without limitation if you breach the Terms.</p>
 
-   <p><big>4. User Accounts</big></p>
+        <h2>7. Governing Law</h2>
+        <p>These Terms shall be governed and construed in accordance with the laws of [Your Country/State], without regard to its conflict of law provisions.</p>
 
-   <p>To access certain features of the Service, you may be required to Login with Discord. You are responsible for maintaining the confidentiality of your account credentials.</p>
-  <p>=====================================================================================================</p>
+        <h2>8. Changes to Terms</h2>
+        <p>We reserve the right, at our sole discretion, to modify or replace these Terms at any time. By continuing to access or use our service after those revisions become effective, you agree to be bound by the revised terms.</p>
 
-   <p><big>5. Discord Bot Usage</big></p>
+        <p>If you have any questions about these Terms, please contact us at [Your Contact Email].</p>
+    </div>
 
-   <p>Usage of LynxStudios Discord bots is subject to separate terms outlined in the bot's documentation. Users are expected to adhere to those terms when interacting with the bots.</p>
-  <p>=====================================================================================================</p>
-
-  <p><big>6. Privacy Policy</big></p>
-
-  <p>Your use of the Service is also governed by our Privacy Policy, which can be found at <a href="/privacy" class="">Privacy Polocy</a>
-  </li></p>
-  <p>=====================================================================================================</p>
-
-  <p><big>7. Limitation of Liability</big></p>
-
-  <p>To the maximum extent permitted by applicable law, LynxStudios and its affiliates shall not be liable for any indirect, incidental, special, consequential, or punitive damages, or any loss of profits or revenues, whether incurred directly or indirectly.</p>
-  <p>=====================================================================================================</p>
-
-  <p><big>8. Changes to Terms</big>  </p>
-
-  <p>LynxStudios reserves the right to update or modify these Terms of Service at any time without prior notice. Your continued use of the Service after any changes will constitute your acceptance of such changes.</p>
-  <p>=====================================================================================================</p>
-
-  <p><big>9. Termination</big></p>
-
-  <p>LynxStudios reserves the right to terminate or suspend your access to the Service for any reason without prior notice.</p>
-  <p>=====================================================================================================</p>
-
-  <p><big>10. Contact Information</big></p>
-
-  <p>If you have any questions or concerns about these Terms of Service, please contact us at <a href="mailto:support@lynxstudios.xyz" class="cta-button">Contact Us</a></form>
-  <form action="mail.google.com"></p>
-    
-  <p>By using Lynx Studios, you agree to these terms and conditions. If you do not agree to abide by these terms, please do not use the bots.</p>
-
-  <p>========================================================================================</p>
-
-
-  <p><big></big> 
-    &copy; 2023 - 2024 <a href="https://www.lynxstudios.xyz/">LYNX STUDIOS</a> all rights reserved
-  </big></p>
-
-
-  <style>
-    #white{
-      color: #DBE9FA
-    }
-    #red{
-      color: #DBE9FA
-    }
-    #yellow{
-      color: #DBE9FA
-    }
-    p {
-      font-family:tahoma;
-      font-size: 17px;
-      color: #000000  ;
-    }
-    body {
-      background : #DBE9FA ;
-      padding:  64px;
-      text-align: center;
-    }
-    h1{
-      color: #DBE9FA
-      font-family: tahoma;
-    }
-  </style>
+    <footer>
+        <p>&copy; 2023 - 2024 LYNX STUDIOS. All rights reserved.</p>
+    </footer>
+</body></html>
