--- a/legal/privacy.html
+++ b/legal/privacy.html
@@ -1,73 +1,109 @@
-<html>
-<head>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-4223895243915385"
-     crossorigin="anonymous"></script>
-     <meta name="description" content="Shows The Privacy Policy For Lynx Studios">
-<title>Privacy Policy</title>
+<html><head><base href="https://lynxstudios.xyz/privacy">
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <title>LYNX STUDIOS | Privacy Policy</title>
+    <link rel="shortcut icon" href="/lynxw1.png" type="image/x-icon">
+    <style>
+        body, html {
+            margin: 0;
+            padding: 0;
+            font-family: Arial, sans-serif;
+            background-color: #1a1a1a;
+            color: #ffffff;
+            line-height: 1.6;
+        }
+        header {
+            background-color: #2c2c2c;
+            padding: 20px 0;
+            text-align: center;
+        }
+        .logo img {
+            width: 100px;
+            height: auto;
+        }
+        nav {
+            margin-top: 20px;
+        }
+        nav a {
+            color: #ffffff;
+            text-decoration: none;
+            margin: 0 15px;
+            font-size: 18px;
+        }
+        .content {
+            max-width: 800px;
+            margin: 50px auto;
+            padding: 0 20px;
+        }
+        h1, h2 {
+            color: #4071A8;
+        }
+        footer {
+            background-color: #2c2c2c;
+            text-align: center;
+            padding: 20px 0;
+            margin-top: 50px;
+        }
+    </style>
 </head>
-  <link rel="shortcut icon" href="/botxw123.png" type="image/x-icon">
+<body>
+    <header>
+        <div class="logo">
+            <img src="/lynxw1.png" alt="Lynx Studios Logo">
+        </div>
+        <nav>
+            <a href="/">Home</a>
+            <a href="/#about">About</a>
+            <a href="/#bots">Bots</a>
+            <a href="/Premuim">Premium</a>
+            <a href="/legal/terms">Legal</a>
+            <a href="/live-support">24/7 Live Chat</a>
+        </nav>
+    </header>
 
-  <a href="#" class="logo">
-    <img src="/botxw.png" alt="">
-  </a>
+    <div class="content">
+        <h1>Privacy Policy</h1>
+        <p>Last updated: Dec 19, 2023</p>
 
-  <li>
-    <a href="https://www.lynxstudios.xyz/" class="navbar-link">Home</a>
-  </li>
-<p><big>--Privacy Policy--</big></p>
-<p><big>Effective Date:&nbsp;December 19,2023</big></p>
-<p><big>========================================================================================</big></p>
-  <p>This Privacy Policy describes how Lynx Studios collects, uses, and protects any information that users provide when using our Discord bot and associated services.</p>
-<p><big>========================================================================================</big></p>
-<p><big>Information We Collect</big></p>
-<p> Discord Information: We may collect and store certain information provided by Discord, including user IDs, usernames, and avatar URLs.</p>
-<p>Usage Data: We collect information about how users interact with our bots, such as command usage, timestamps, and errors.</p>
-<p><big>========================================================================================</big></p>
-<p><big>How We Use Collected Information</big></p>
-<p>Service Improvement: We use the collected information to understand user preferences and enhance the functionality and performance of our bots.</p>
-<p>Communication: We may use Discord-related information to communicate with users, respond to queries, and provide support.
-</p>
-<p><big>========================================================================================</big></p>
+        <h2>1. Introduction</h2>
+        <p>Welcome to LYNX STUDIOS. We are committed to protecting your personal information and your right to privacy. This Privacy Policy explains how we collect, use, disclose, and safeguard your information when you use our Discord bots or visit our website.</p>
 
+        <h2>2. Information We Collect</h2>
+        <p>We collect information that you provide directly to us when using our services. This may include:</p>
+        <ul>
+            <li>Discord user ID</li>
+            <li>Server ID</li>
+            <li>User-generated content (e.g., commands used, messages sent to our bots)</li>
+            <li>Any other information you choose to provide</li>
+        </ul>
 
+        <h2>3. How We Use Your Information</h2>
+        <p>We use the information we collect to:</p>
+        <ul>
+            <li>Provide, maintain, and improve our services</li>
+            <li>Respond to your requests and inquiries</li>
+            <li>Monitor and analyze trends, usage, and activities in connection with our services</li>
+            <li>Detect, prevent, and address technical issues</li>
+            <li>Comply with legal obligations</li>
+        </ul>
 
+        <h2>4. Data Retention</h2>
+        <p>We retain your information for as long as necessary to provide our services and fulfill the purposes outlined in this Privacy Policy. You can request deletion of your data at any time by contacting us.</p>
 
+        <h2>5. Security</h2>
+        <p>We take reasonable measures to help protect your personal information from loss, theft, misuse, unauthorized access, disclosure, alteration, and destruction.</p>
 
+        <h2>6. Your Rights</h2>
+        <p>You have the right to access, update, or delete your information. You can do this by contacting us directly.</p>
 
+        <h2>7. Changes to This Privacy Policy</h2>
+        <p>We may update our Privacy Policy from time to time. We will notify you of any changes by posting the new Privacy Policy on this page.</p>
 
+        <h2>8. Contact Us</h2>
+        <p>If you have any questions about this Privacy Policy, please contact us at Support@lynxstudios.xyz.</p>
+    </div>
 
-
-
-
-
-
-
-    &copy; 2023 - 2024 <a href="https://www.lynxstudios.xyz/">LYNX STUDIOS</a> all rights reserved
-  </big></p>
-
-
-  <style>
-    #white{
-      color: #DBE9FA
-    }
-    #red{
-      color: #DBE9FA
-    }
-    #yellow{
-      color: #DBE9FA
-    }
-    p {
-      font-family:tahoma;
-      font-size: 17px;
-      color: #000000  ;
-    }
-    body {
-      background : #DBE9FA ;
-      padding:  64px;
-      text-align: center;
-    }
-    h1{
-      color: #DBE9FA
-      font-family: tahoma;
-    }
-  </style>
+    <footer>
+        <p>&copy; 2023 - 2024 LYNX STUDIOS. All rights reserved.</p>
+    </footer>
+</body></html>
