--- a/status.html
+++ b/status.html
@@ -105,7 +105,7 @@
   <script>
     const services = [
       { name: 'Website', details: 'Main website and user portal' },
-      { name: 'Bots', details: 'Bot status's ' },
+      { name: 'Bots', details: 'Bots status ' },
       { name: 'Community Forum', details: 'User discussions and support' },
       { name: 'Support Tickets', details: 'Customer service system' },
       { name: 'Content Delivery', details: 'Asset and patch distribution' },
