--- a/index.html
+++ b/index.html
@@ -90,7 +90,12 @@
               </li>
 
               <li>
-                <a href="/legal/terms" class="navbar-link">Legal</a>
+                     <li class="dropdown">
+                     <a href="/legal/terms" class="navbar-link">Legal</a>
+                     <ul class="dropdown-content">
+                     <li><a href="/legal/privacy">Privacy Policy</a></li>
+                     <li><a href="/legal/terms">Terms of Service</a></li>
+
               </li>
 
               <li>
