--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
 
               <li>
                      <li class="dropdown">
-                     <a href="/legal/terms" class="navbar-link">Legal</a>
+                     <a href="/legal/terms">Legal</a>
                      <ul class="dropdown-content">
                      <li><a href="/legal/privacy">Privacy Policy</a></li>
                      <li><a href="/legal/terms">Terms of Service</a></li>
