--- a/index.html
+++ b/index.html
@@ -232,7 +232,7 @@
 
                 <div class="card-icon">
                   <img src="./assets/images/single-create-sell-item-4.png" alt="diamond icon">
-                    <a href="https://watchfumovies.com/">
+                    <a href="/premuim">
                 </div>
 
                 <h3 class="h3 about-card-title">Premium</h3>
