--- a/index.html
+++ b/index.html
@@ -91,10 +91,10 @@
 
               <li>
                      <li class="dropdown">
-                     <a href="/legal/terms">Legal</a>
+                     <a href="/legal/terms" class="navbar2">Legal</a>
                      <ul class="dropdown-content">
-                     <li><a href="/legal/privacy">Privacy Policy</a></li>
-                     <li><a href="/legal/terms">Terms of Service</a></li>
+                     <li><a href="/legal/privacy" class="navbar2">Privacy Policy</a></li>
+                     <li><a href="/legal/terms" class="navbar2">Terms of Service</a></li>
                  </ul>
               </li>
 
