--- a/index.html
+++ b/index.html
@@ -93,8 +93,8 @@
                      <li class="dropdown">
                      <a href="/legal/terms" class="navbar2">Legal</a>
                      <ul class="dropdown-content">
-                     <li><a href="/legal/privacy" class="navbar2">Privacy Policy</a></li>
-                     <li><a href="/legal/terms" class="navbar2">Terms of Service</a></li>
+                     <li><a href="/legal/privacy">Privacy Policy</a></li>
+                     <li><a href="/legal/terms">Terms of Service</a></li>
                  </ul>
               </li>
 
