--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
               </li>
                 
                      <li class="dropdown">
-                     <a href="/legal/terms" class="navbar2">Legal</a>
+                     <a href="/legal/terms">Legal</a>
                      <ul class="dropdown-content">
                      <li><a href="/legal/privacy">Privacy Policy</a></li>
                      <li><a href="/legal/terms">Terms of Service</a></li>
