--- a/index.html
+++ b/index.html
@@ -89,6 +89,14 @@
                 <a href="/Premuim" class="navbar-link">Premuim</a>
               </li>
                 
+                <li class="dropdown">
+                <a href="#">Legal</a>
+                <ul class="dropdown-content">
+                    <li><a href="#" class="navbar2">Privacy Policy</a></li>
+                    <li><a href="#" class="navbar2">Terms of Service</a></li>
+                </ul>
+            </li>
+                
               <li>
                 <a href="/live-support" class="navbar-link">24/7 Live Chat</a>
               </li>
