--- a/index.html
+++ b/index.html
@@ -92,8 +92,8 @@
                 <li class="dropdown">
                 <a href="#">Legal</a>
                 <ul class="dropdown-content">
-                    <li><a href="#" class="navbar2">Privacy Policy</a></li>
-                    <li><a href="#" class="navbar2">Terms of Service</a></li>
+                    <li><a href="/legal/privacy" class="navbar2">Privacy Policy</a></li>
+                    <li><a href="/legal/terms" class="navbar2">Terms of Service</a></li>
                 </ul>
             </li>
                 
