--- a/index.html
+++ b/index.html
@@ -44,6 +44,7 @@
   <meta property="og:title" content="Lynx Studios - Platform">
   <meta property="og:url" content="https://lynxstudios.xyz/">
   <meta property="og:type" content="website">
+  <meta name="google-adsense-account" content="ca-pub-6017523276345239">
   <meta property="og:description" content="OFFICIAL WEBSITE FOR LYNX STUDIOS SERVICES">
   <meta name="theme-color" content="#4071A8">
   <meta name="keywords" content="LYNX STUDIOS, EpicBot, lynxstudios, lynx studios llc, LYNX STUDIOS LLC, discord bots ">
