--- a/index.html
+++ b/index.html
@@ -38,6 +38,8 @@
     <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-4223895243915385"
       crossorigin="anonymous">
     </script>
+    <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-6017523276345239"
+     crossorigin="anonymous"></script>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width">
   <meta name="description" content="OFFICIAL WEBSITE FOR LYNX STUDIOS SERVICES">
