--- a/legal/privacy.html
+++ b/legal/privacy.html
@@ -1,7 +1,7 @@
 <html><head><base href="https://lynxstudios.xyz/privacy">
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>LYNX STUDIOS | Privacy Policy</title>
+    <title>Privacy Policy</title>
     <link rel="shortcut icon" href="/lynxw1.png" type="image/x-icon">
     <style>
         body, html {
