--- a/legal/terms.html
+++ b/legal/terms.html
@@ -1,7 +1,7 @@
 <html><head><base href="https://lynxstudios.xyz/legal/terms">
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>LYNX STUDIOS | Terms of Service</title>
+    <title>Terms of Service</title>
     <link rel="shortcut icon" href="/lynxw1.png" type="image/x-icon">
     <style>
         body, html {
