--- a/legal/privacy.html
+++ b/legal/privacy.html
@@ -1,4 +1,4 @@
-<html><head><base href="https://lynxstudios.xyz/privacy">
+<html><head><base href="https://lynxstudios.xyz/legal/privacy">
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Privacy Policy</title>
