--- a/index.html
+++ b/index.html
@@ -260,7 +260,7 @@
       </section>
 
       <div class="ad-a">
-      <a href="https://watchfumovies.com/">
+      <a href="https://cloudflixx.vercel.app/">
         <img src="/freemov1.jpg" alt="" class="ad-a">
       </a>
       </div>
