--- a/index.html
+++ b/index.html
@@ -261,7 +261,7 @@
 
       <div class="ad-a">
       <a href="https://cloudflixx.vercel.app/">
-        <img src="/freemov1.jpg" alt="" class="ad-a">
+        <img src="/adcloudflixx.png" alt="" class="ad-a">
       </a>
       </div>
       
