--- a/index.html
+++ b/index.html
@@ -263,6 +263,7 @@
       <a href="https://cloudflixx.vercel.app/">
         <img src="/adcloudflixx1.png" alt="" class="ad-a">
       </a>
+          <h1>CLICK ME</h1>
       </div>
       
       <!-- 
