--- a/index.html
+++ b/index.html
@@ -262,6 +262,7 @@
       <div class="ad-a">
       <a href="https://cloudflixx.vercel.app/">
         <img src="/adcloudflixx1.png" alt="" class="ad-a">
+          <h1>CLICK ME</h1>
       </a>
           <h1>CLICK ME</h1>
       </div>
